// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CLI help tree should expose each domain's operations 1`] = `
{
  "archive": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "X-Ray archive tools",
      "",
      "Usage: xrf-cli archive [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  extract  Extract one archive file or directory without unpacking the complete set",
      "  find     Find archive entries whose logical path contains text",
      "  info     Describe an X-Ray archive volume or volume set",
      "  list     List the merged entries in an X-Ray archive volume or volume set",
      "  pack     Command to pack provided directory into *.db archive volumes",
      "  unpack   Command to unpack provided *.db into separate files",
      "  verify   Read every archive payload and verify decompression and CRC checks",
      "  help     Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "dds": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "DDS texture file tools",
      "",
      "Usage: xrf-cli dds [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  crop  Command to crop a rectangular region out of a dds file into a new dds file",
      "  info  Command to print information about provided dds file",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "dialog": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Dialog inspection tools",
      "",
      "Usage: xrf-cli dialog [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info  Command to read dialog xml and report what it holds",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "docs": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "CLI documentation tools",
      "",
      "Usage: xrf-cli docs [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  generate  Command to generate markdown reference for all CLI commands",
      "  help      Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "externs": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Script extern export tools",
      "",
      "Usage: xrf-cli externs [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  export  Export TypeScript extern declarations as JSON, XML, or HTML",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "gamedata": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Assembled gamedata tools",
      "",
      "Usage: xrf-cli gamedata [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  list    List assets resolved by an installation or gamedata tree",
      "  verify  Command to verify gamedata",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "ltx": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "LTX configuration tools",
      "",
      "Usage: xrf-cli ltx [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  format  Command to format ltx and ini files",
      "  verify  Command for verification of ltx and ini files",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "ogf": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "OGF model tools",
      "",
      "Usage: xrf-cli ogf [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  fix                 Command to rewrite ogf visuals into well-formed bytes, changing nothing the engine reads",
      "  info                Command to print information about provided ogf file",
      "  patch-motion-refs   Command to rewrite motion refs of provided ogf file",
      "  patch-texture-refs  Command to rename a texture reference of provided ogf file",
      "  verify              Command to verify ogf visuals can be packed for rendering",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "omf": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "OMF motion tools",
      "",
      "Usage: xrf-cli omf [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  duplicate-motion  Command to copy a motion of provided omf file under a new name",
      "  filter-motions    Command to keep only selected motions of provided omf file",
      "  info              Command to print information about provided omf file",
      "  rename-motions    Command to rename motions of provided omf file",
      "  repack            Command to repack provided omf file or directory of omf files",
      "  help              Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "particle": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Particle library tools",
      "",
      "Usage: xrf-cli particle [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info       Command to print information about provided particle file",
      "  pack       Command to pack unpacked particle files into single particle.xr",
      "  repack     Command to repack provided particle.xr into another file",
      "  re-unpack  Command to re-unpack provided particle directory into another directory",
      "  unpack     Command to unpack provided particle.xr into separate files",
      "  verify     Command to verify provided particle file",
      "  help       Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "profile": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Performance measurement tools",
      "",
      "Usage: xrf-cli profile [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  run   Command to measure one invocation across builds, interleaved",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "spawn": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Spawn file tools",
      "",
      "Usage: xrf-cli spawn [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info    Command to print information about provided spawn file",
      "  pack    Command to pack unpacked spawn files into single *.spawn",
      "  repack  Command to repack provided *.spawn into another file",
      "  unpack  Command to unpack provided *.spawn into separate files",
      "  verify  Command to verify provided spawn file",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "sprite": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Sprite sheet tools",
      "",
      "Usage: xrf-cli sprite [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  pack-description    Command to pack the sprites a texture description xml declares",
      "  pack-equipment      Command to pack an equipment sprite from separate icon files",
      "  unpack-description  Command to unpack the sprites a texture description xml declares",
      "  unpack-equipment    Command to unpack separate icon files out of an equipment sprite",
      "  verify-equipment    Command to check an equipment sprite's inventory icon grid rects for overlaps",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "thm": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "THM texture metadata tools",
      "",
      "Usage: xrf-cli thm [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  patch-bump  Command to repoint the bump texture reference of provided thm file",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
  "translation": {
    "exitCode": 0,
    "stderr": [],
    "stdout": [
      "Translation file tools",
      "",
      "Usage: xrf-cli translation [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  build       Command to build translation files into gamedata",
      "  format      Command to normalize json translation sources",
      "  initialize  Command to initialize translation files",
      "  parse       Command to parse xml translations into json sources",
      "  verify      Command to verify translation files integrity",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
  },
}
`;

exports[`CLI help tree should expose every domain from root help 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "XRF forge CLI tools application",
    "",
    "Usage: xrf-cli [OPTIONS] [COMMAND]",
    "",
    "Commands:",
    "  archive      X-Ray archive tools",
    "  dds          DDS texture file tools",
    "  dialog       Dialog inspection tools",
    "  docs         CLI documentation tools",
    "  externs      Script extern export tools",
    "  gamedata     Assembled gamedata tools",
    "  ltx          LTX configuration tools",
    "  ogf          OGF model tools",
    "  omf          OMF motion tools",
    "  particle     Particle library tools",
    "  profile      Performance measurement tools",
    "  spawn        Spawn file tools",
    "  sprite       Sprite sheet tools",
    "  thm          THM texture metadata tools",
    "  translation  Translation file tools",
    "  help         Print this message or the help of the given subcommand(s)",
    "",
    "Options:",
    "  -s, --silent         Turn off logging",
    "  -v, --verbose        Turn on verbose logging",
    "      --json           Write the run's JSON report to stdout, moving human output to stderr",
    "      --report <PATH>  Write the run's JSON report to a file",
    "  -h, --help           Print help",
    "  -V, --version        Print version",
  ],
}
`;

exports[`CLI help tree should show domain help when an operation is missing 1`] = `
{
  "archive": {
    "exitCode": 2,
    "stderr": [
      "X-Ray archive tools",
      "",
      "Usage: xrf-cli archive [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  extract  Extract one archive file or directory without unpacking the complete set",
      "  find     Find archive entries whose logical path contains text",
      "  info     Describe an X-Ray archive volume or volume set",
      "  list     List the merged entries in an X-Ray archive volume or volume set",
      "  pack     Command to pack provided directory into *.db archive volumes",
      "  unpack   Command to unpack provided *.db into separate files",
      "  verify   Read every archive payload and verify decompression and CRC checks",
      "  help     Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "dds": {
    "exitCode": 2,
    "stderr": [
      "DDS texture file tools",
      "",
      "Usage: xrf-cli dds [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  crop  Command to crop a rectangular region out of a dds file into a new dds file",
      "  info  Command to print information about provided dds file",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "dialog": {
    "exitCode": 2,
    "stderr": [
      "Dialog inspection tools",
      "",
      "Usage: xrf-cli dialog [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info  Command to read dialog xml and report what it holds",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "docs": {
    "exitCode": 2,
    "stderr": [
      "CLI documentation tools",
      "",
      "Usage: xrf-cli docs [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  generate  Command to generate markdown reference for all CLI commands",
      "  help      Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "externs": {
    "exitCode": 2,
    "stderr": [
      "Script extern export tools",
      "",
      "Usage: xrf-cli externs [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  export  Export TypeScript extern declarations as JSON, XML, or HTML",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "gamedata": {
    "exitCode": 2,
    "stderr": [
      "Assembled gamedata tools",
      "",
      "Usage: xrf-cli gamedata [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  list    List assets resolved by an installation or gamedata tree",
      "  verify  Command to verify gamedata",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "ltx": {
    "exitCode": 2,
    "stderr": [
      "LTX configuration tools",
      "",
      "Usage: xrf-cli ltx [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  format  Command to format ltx and ini files",
      "  verify  Command for verification of ltx and ini files",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "ogf": {
    "exitCode": 2,
    "stderr": [
      "OGF model tools",
      "",
      "Usage: xrf-cli ogf [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  fix                 Command to rewrite ogf visuals into well-formed bytes, changing nothing the engine reads",
      "  info                Command to print information about provided ogf file",
      "  patch-motion-refs   Command to rewrite motion refs of provided ogf file",
      "  patch-texture-refs  Command to rename a texture reference of provided ogf file",
      "  verify              Command to verify ogf visuals can be packed for rendering",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "omf": {
    "exitCode": 2,
    "stderr": [
      "OMF motion tools",
      "",
      "Usage: xrf-cli omf [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  duplicate-motion  Command to copy a motion of provided omf file under a new name",
      "  filter-motions    Command to keep only selected motions of provided omf file",
      "  info              Command to print information about provided omf file",
      "  rename-motions    Command to rename motions of provided omf file",
      "  repack            Command to repack provided omf file or directory of omf files",
      "  help              Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "particle": {
    "exitCode": 2,
    "stderr": [
      "Particle library tools",
      "",
      "Usage: xrf-cli particle [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info       Command to print information about provided particle file",
      "  pack       Command to pack unpacked particle files into single particle.xr",
      "  repack     Command to repack provided particle.xr into another file",
      "  re-unpack  Command to re-unpack provided particle directory into another directory",
      "  unpack     Command to unpack provided particle.xr into separate files",
      "  verify     Command to verify provided particle file",
      "  help       Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "profile": {
    "exitCode": 2,
    "stderr": [
      "Performance measurement tools",
      "",
      "Usage: xrf-cli profile [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  run   Command to measure one invocation across builds, interleaved",
      "  help  Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "spawn": {
    "exitCode": 2,
    "stderr": [
      "Spawn file tools",
      "",
      "Usage: xrf-cli spawn [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  info    Command to print information about provided spawn file",
      "  pack    Command to pack unpacked spawn files into single *.spawn",
      "  repack  Command to repack provided *.spawn into another file",
      "  unpack  Command to unpack provided *.spawn into separate files",
      "  verify  Command to verify provided spawn file",
      "  help    Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "sprite": {
    "exitCode": 2,
    "stderr": [
      "Sprite sheet tools",
      "",
      "Usage: xrf-cli sprite [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  pack-description    Command to pack the sprites a texture description xml declares",
      "  pack-equipment      Command to pack an equipment sprite from separate icon files",
      "  unpack-description  Command to unpack the sprites a texture description xml declares",
      "  unpack-equipment    Command to unpack separate icon files out of an equipment sprite",
      "  verify-equipment    Command to check an equipment sprite's inventory icon grid rects for overlaps",
      "  help                Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "thm": {
    "exitCode": 2,
    "stderr": [
      "THM texture metadata tools",
      "",
      "Usage: xrf-cli thm [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  patch-bump  Command to repoint the bump texture reference of provided thm file",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
  "translation": {
    "exitCode": 2,
    "stderr": [
      "Translation file tools",
      "",
      "Usage: xrf-cli translation [OPTIONS] [COMMAND]",
      "",
      "Commands:",
      "  build       Command to build translation files into gamedata",
      "  format      Command to normalize json translation sources",
      "  initialize  Command to initialize translation files",
      "  parse       Command to parse xml translations into json sources",
      "  verify      Command to verify translation files integrity",
      "  help        Print this message or the help of the given subcommand(s)",
      "",
      "Options:",
      "  -s, --silent         Turn off logging",
      "  -v, --verbose        Turn on verbose logging",
      "      --json           Write the run's JSON report to stdout, moving human output to stderr",
      "      --report <PATH>  Write the run's JSON report to a file",
      "  -h, --help           Print help",
    ],
    "stdout": [],
  },
}
`;
